--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,12 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : 2B || !2B == ?
+tagline: I Can Haz Thinks
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Will Olner
+  github : willoftw
+  twitter : willoftw
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
